[tool.poetry]
name = "scraper-demo"
version = "0.0.1"
description = "Demonstration of a basic web scraping service"
authors = ["Brayden Kness <brayk2@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
playwright = "^1.39.0"
httpx = "^0.25.0"
pydantic = "^2.4.2"
black = "^23.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
